--- a/.github/workflows/main_cicd.yml
+++ b/.github/workflows/main_cicd.yml
@@ -21,7 +21,12 @@ jobs:
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
           aws-region: ${{ secrets.AWS_REGION }}
+      - name: Archive Release
+        uses: thedoctor0/zip-release@main
+        with:
+          type: 'zip'
+          filename: cicd.zip
+          exclusions: '*.git*'
       - name: Upload to S3
         run: |
-          aws s3 cp ./demo_project/ s3://cicd-deploy-s3-bucket/ --recursive
-          aws s3 cp ./Dockerfile s3://cicd-deploy-s3-bucket/ 
+          aws s3 cp ./cicd.zip s3://cicd-deploy-s3-bucket/ 
