--- a/demo_project/src/main/resources/application.properties
+++ b/demo_project/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=demo_project
+
+spring.jpa.database=POSTGRESQL
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://54.238.83.136:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=P@ssw0rd
+spring.jpa.open-in-view=True
