unitテストを動作確認用としてコメントアウト

--- a/.github/workflows/pro/deploy-ecs/action.yml
+++ b/.github/workflows/pro/deploy-ecs/action.yml
@@ -12,12 +12,12 @@ permissions:
   contents: read
 
 runs:
-  using: 'composite'
-  steps:
-    - name: Running unit tests
-      shell: bash
-      run: |
-        mvn -f ./demo_project/ test
+  # using: 'composite'
+  # steps:
+  #   - name: Running unit tests
+  #     shell: bash
+  #     run: |
+  #       mvn -f ./demo_project/ test
 
     - name: Checkout code
       uses: actions/checkout@v2
