--- a/.github/workflows/pro/deploy-ecs/action.yml
+++ b/.github/workflows/pro/deploy-ecs/action.yml
@@ -14,10 +14,10 @@ permissions:
 runs:
   using: 'composite'
   steps:
-    - name: Running unit tests
-      shell: bash
-      run: |
-        mvn -f ./demo_project/ test
+  #   - name: Running unit tests
+  #     shell: bash
+  #     run: |
+  #       mvn -f ./demo_project/ test
 
     - name: Checkout code
       uses: actions/checkout@v2
